CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(WTF VERSION 0.0.1)
SET(CPP_STANDARD 20)
SET(CPP_STANDARD_REQUIRED True)
ADD_EXECUTABLE(client SimpleClient.cpp)
ADD_EXECUTABLE(server SimpleServer.cpp)
TARGET_LINK_LIBRARIES(client asio)
TARGET_LINK_LIBRARIES(server asio)
add_library(asio INTERFACE)
target_include_directories(asio INTERFACE /usr/include/asio)
